fix cd pipeline cloud run

--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -83,4 +83,4 @@ jobs:
           --platform "managed" \
           --allow-unauthenticated \
           --tag staging \
-          --revision-suffix=staging-${{github.sha}}
+          --revision-suffix=staging-v1
