fix push to gcr4

--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -56,9 +56,9 @@ jobs:
         run: |
           docker push ${{env.IMAGE}}
        
-      - name: Authenticate for GCR
-        run: |
-          gcloud auth configure-docker ${{vars.GCR_REGION}}-docker.pkg.dev
+      # - name: Authenticate to GCR for docker
+        # run: |
+          # gcloud auth configure-docker ${{vars.GCR_REGION}}-docker.pkg.dev
           
       - name: Build and tag Image with GCR Repo details
         run: |
