--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -52,9 +52,9 @@ jobs:
         run: |
           docker build -t ${{env.IMAGE}} .
 
-      - name: Push the image to Docker hub
-        run: |
-          docker push ${{env.IMAGE}}
+      # - name: Push the image to Docker hub
+        # run: |
+          # docker push ${{env.IMAGE}}
        
       - name: Authenticate to GCR for docker
         run: |
