--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -82,10 +82,10 @@ jobs:
         id: 'release'
         uses: 'google-github-actions/create-cloud-deploy-release@v0'
         with:
-          delivery_pipeline: '${{ env.APP }}'
-          name: '${{ env.RELEASE_NAME }}'
+          delivery_pipeline: 'my-gke-demo-app-1'
+          name: 'release-gke'
           region: '${{ vars.GCR_REGION }}'
-          description: '${{ env.GITHUB_COMMIT_MSG }}'
+          description: 'deploy on gke'
           skaffold_file: 'config/skaffold.yaml'
           images: 'app=${{vars.GCR_REGION}}-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/${{vars.GCR_REPO}}/testapp:${{github.sha}}'
 
