--- a/config/clouddeploy.yaml
+++ b/config/clouddeploy.yaml
@@ -1,29 +1,52 @@
-apiVersion: deploy.cloud.google.com/v1
-kind: DeliveryPipeline
-metadata:
-  name: my-gke-demo-app-1
-description: main application pipeline
-serialPipeline:
-  stages:
-  - targetId: qsdev
-    profiles: []
-  - targetId: qsprod
-    profiles: []
----
+# apiVersion: deploy.cloud.google.com/v1
+# kind: DeliveryPipeline
+# metadata:
+  # name: my-gke-demo-app-1
+# description: main application pipeline
+# serialPipeline:
+  # stages:
+  # - targetId: qsdev
+    # profiles: []
+  # - targetId: qsprod
+    # profiles: []
+# ---
+
+# apiVersion: deploy.cloud.google.com/v1
+# kind: Target
+# metadata:
+  # name: qsdev
+# description: development cluster
+# gke:
+  # cluster: projects/watchful-hall-447106-r1/locations/us-central1/clusters/qsdev
+# ---
+
+# apiVersion: deploy.cloud.google.com/v1
+# kind: Target
+# metadata:
+  # name: qsprod
+# description: production cluster
+# gke:
+  # cluster: projects/watchful-hall-447106-r1/locations/us-central1/clusters/qsprod
+  
+  
+  
+  
+# apiVersion: deploy.cloud.google.com/v1
+# kind: DeliveryPipeline
+# metadata:
+  # name: my-gke-demo-app-1
+# description: main application pipeline
+# serialPipeline:
+  # stages:
+  # - targetId: dev
+    # profiles: []
+# ---
 
 apiVersion: deploy.cloud.google.com/v1
 kind: Target
 metadata:
-  name: qsdev
+  name: dev
 description: development cluster
 gke:
-  cluster: projects/watchful-hall-447106-r1/locations/us-central1/clusters/qsdev
----
-
-apiVersion: deploy.cloud.google.com/v1
-kind: Target
-metadata:
-  name: qsprod
-description: production cluster
-gke:
-  cluster: projects/watchful-hall-447106-r1/locations/us-central1/clusters/qsprod
+  cluster: projects/watchful-hall-447106-r1/locations/us-central1/clusters/app-cluster
+ 
