--- a/config/clouddeploy.yaml
+++ b/config/clouddeploy.yaml
@@ -31,16 +31,16 @@
   
   
   
-# apiVersion: deploy.cloud.google.com/v1
-# kind: DeliveryPipeline
-# metadata:
-  # name: my-gke-demo-app-1
-# description: main application pipeline
-# serialPipeline:
-  # stages:
-  # - targetId: dev
-    # profiles: []
-# ---
+apiVersion: deploy.cloud.google.com/v1
+kind: DeliveryPipeline
+metadata:
+  name: my-gke-demo-app-1
+description: main application pipeline
+serialPipeline:
+  stages:
+  - targetId: dev
+    profiles: []
+---
 
 apiVersion: deploy.cloud.google.com/v1
 kind: Target
