--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -125,7 +125,7 @@ jobs:
           region: '${{ vars.GCR_REGION }}'
           description: 'deploy on gke'
           skaffold_file: 'config/skaffold.yaml'
-          images: 'app=${{vars.GCR_REGION}}-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/${{vars.GCR_REPO}}/testapp:${{github.sha}}'
+          images: 'my-app-image=${{vars.GCR_REGION}}-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/${{vars.GCR_REPO}}/testapp:${{github.sha}}'
 
       # - name: 'Report Cloud Deploy release'
         # run: |-
