--- a/config/k8s-pod.yaml
+++ b/config/k8s-pod.yaml
@@ -1,8 +1,42 @@
-apiVersion: v1
-kind: Pod
+# apiVersion: v1
+# kind: Pod
+# metadata:
+  # name: getting-started
+# spec:
+  # containers:
+  # - name: nginx
+    # image: my-app-image
+    
+    
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: getting-started
+  name: my-deployment
 spec:
-  containers:
-  - name: nginx
-    image: my-app-image
+  replicas: 3
+  selector:
+    matchLabels:
+      app: my-app
+  template:
+    metadata:
+      labels:
+        app: my-app
+    spec:
+      containers:
+        - name: my-container
+          image: my-app-image
+          ports:
+            - containerPort: 8080
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+spec:
+  selector:
+    app: my-app
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+  type: LoadBalancer    
